minikubes/todo-react-go-app/k8s/be.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-golang-react-be
  labels:
    app: todo-golang-react-be
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-golang-react-be
  template:
    metadata:
      labels:
        app: todo-golang-react-be
    spec:
      containers:
      - name: todo-golang-react-be
        image: todo-golang-react-be
        imagePullPolicy: Never
        ports:
          - containerPort: 32001
