minikubes/todo-react-go-app/k8s/be.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-golang-react-be-service
spec:
  type: NodePort
  selector:
    app: todo-golang-react-be
  ports:
    - protocol: TCP
      port: 32001
      targetPort: 32001
      nodePort: 32001             # use port 32001 as nodePort
