minikubes/todo-react-go-app/k8s/ui.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-golang-react-ui-service
spec:
  type: NodePort
  selector:
    app: todo-golang-react-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32000             # use port 32000 as nodePort
